修复SQLSetCursorName不能设置重命cursorname

--- a/odbc-test-gauss/Makefile
+++ b/odbc-test-gauss/Makefile
@@ -48,6 +48,7 @@ ifndef cases
 		odbc_SQLGetStmtAttr \
 		odbc_SQLNumParams \
 		odbc_SQLSetDescField \
+		odbc_SQLSetCursorName \
 		odbc_SQLStatistics \
 		odbc_SQLTables \
 		odbc_stmt_timeout_01_pg_sleep \
